--- a/package.json
+++ b/package.json
@@ -2,20 +2,28 @@
   "name": "py-backend",
   "version": "0.1.0",
   "private": true,
+  "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "python-shell": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "electron-is-dev": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "react-build": "react-scripts build",
+    "electron-build" : "electron-builder --win -c.extraMetadata.main=build/electron.js",
+    "build": "npm run react-build && npm run electron-build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently -k \"npm start\" \"npm:electron\"",
+    "electron": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +42,34 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "child_process": false
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0",
+    "electron": "^21.3.0",
+    "electron-builder": "^23.6.0",
+    "wait-on": "^6.0.1"
+  },
+  "build": {
+    "appId": "cognizant",
+    "asar": false,
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "nsis": {
+      "installerIcon": "public/favicon.ico"
+    },
+    "files": [
+      "background/**/*",
+      "build/**/*",
+      "public/*.png",
+      "node_modules/**/*",
+      "scripts/calc.py"
+    ],
+    "extends": null
   }
 }
